--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,30 +3,44 @@ name: Run Tests on Push or Pull Request to Main
 on:
   push:
     branches:
-      - main  # Run tests on any push to the main branch
+      - main        # Run tests on any push to main
   pull_request:
     branches:
-      - main  # Run tests on any pull request to the main branch
+      - main        # Run tests on any pull request to main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Check out repository
       - name: Check out the code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Set your desired Python version
+          python-version: '3.x'    # You can set to '3.10', '3.11', etc.
 
-      - name: Install dependencies from requirements.txt
+      # Step 3: Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-cov  # Ensure pytest-cov is installed
+          # Ensure key testing libraries are installed
+          pip install pytest pytest-cov pandas python-dotenv
 
-      - name: Run tests with pytest and enforce 70% coverage
+      # Step 4: Run tests with coverage enforcement
+      - name: Run tests with pytest and enforce 100% coverage
         run: |
-          pytest --cov=app --cov-fail-under=70
+          pytest --cov=app tests/
+          coverage report --fail-under=100
+
+      # (Optional) Step 5: Upload HTML coverage report as GitHub artifact
+      - name: Upload coverage HTML
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-html
+          path: htmlcov
